<resources>
    <string name="app_name">Silver Lining</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="quiz_activity">Quiz</string>
    <string name="resource_activity">Resources</string>
    <string name="themes_activity">Themes</string>
    <string name="about_us_activity">About Us</string>
    <string name="quizintro_activity">Introduction</string>
    <string name="demographics_intro_activity">Demographics</string>
    <string name="demographics_activity">Demographics</string>
    <string name="results_activity">Results</string>
    <string name="main_menu_text">PHQ9 Transcendi Quiz Beta</string>
    <string name="main_start_quiz">How am I doing?</string>
    <string name="resources_button">Resources</string>
    <string name="references_button">References</string>
    <string name="theme_change_button">Customize App</string>
    <string name="about_us_button">About Us</string>
    <string name="about_health_tool">A mental health tool</string>
    <string name="about_us_paragraph">Silver Lining is an application from Morning Sign Out at
        morningsignout.com and its development team, Transcendi. Our application is intended to give
        you a starting place for dealing with depression by providing you a basic understanding of
        your symptoms. If you have any feedback, concerns, or advice, please email us at
        morningsignoutdevs@gmail.com with the subject line <i>Silver Lining Android
        Feedback</i> so that we can improve the resources we offer to your school.</string>
    <string name="about_disclaimer">Disclaimer: This app is meant for educational use only, and is
        not intended for clinical or diagnostic use.</string>
    <string name="quiz_start">Get Started!</string>
    <string name="demo_continue">Share a little about myself</string>
    <string name="demo_skip">No thanks, maybe next time</string>
    <string name="demo_start_quiz">Start Quiz</string>
    <string name="description_previous">Previous question</string>
    <string name="description_next">Next question</string>
    <string name="description_white_border">White border between buttons and questionnaire</string>
    <string name="description_score_fan">Green fan-shaped background for score</string>
    <string name="all_done">You\'re all done!\n\nYour score is %1$d.</string>
    <string name="all_done_land">You\'re all done!\nYour score is %1$d.</string>
    <string name="red_flag_text">There were also some red flag symptoms</string>
    <string name="what_does_it_mean">What does that all mean?</string>
    <string name="finish_up">Finish Up</string>
    <string name="take_me_home">Take me home</string>
    <string name="return_to_home">Return to home</string>
    <string name="feedback">Provide Feedback?</string>
    <string name="resource1">We\'ve prepared some resources for people who want to learn more
        about depression</string>
    <string name="resource2">Find them here!</string>
    <string name="resource_sub">Latest mental health news</string>
    <string-array name="resource_array">
        <item>Learn more about depression</item>
        <item>Tips for good mental health</item>
        <item>Find a local therapist</item>
    </string-array>
    <string-array name="reference_array">
        <item>Latest mental health news</item>
        <item>What is PHQ-9</item>
        <item>Contact Us</item>
    </string-array>
    <string-array name="notifications_array">
        <item>No reminder</item>
        <item>Weekly</item>
        <item>Biweekly</item>
        
    </string-array>
    <string name="depression_note">Depression affects hundreds of millions of people worldwide.\n\n
        We do a poor job of recognizing the problem, but we\'re trying to do better than before.\n\n
        Before we get started, note that all of your results are confidential and will not be shared.</string>
    <string name="demographics_intro1">We want to know a little about you so we can  do a better job
    helping people.</string>
    <string name="demographics_intro2">All this information will be kept anonymous and strictly confidential.</string>
    <string name="full_demographics_intro">We\'re a small group trying to improve mental health
        services at schools across the country.\n\n
        Knowing a little bit about you would help us a lot in terms of figuring out how to reach
        people like you better.\n\n
        If you share some background information with us, note that all of it is confidential. It
        will be used to assess what demographics we need to do a better job of reaching out to and
        help a lot of people in the process.</string>
    <string name="_age">Age</string>
    <string name="_gender">Gender</string>
    <string name="_ethnicity">Ethnicity</string>
    <string name="_school_year">School Year</string>
    <string name="_family">Are you the first in your family to go to college?</string>
    <string name="_college_name">School Name</string>
    <string name="_resources">Resources</string>
    <string name="_references">References</string>
    <string name="answer_not_at_all">Not at all</string>
    <string name="answer_few_days">One or two days a week</string>
    <string name="answer_many_days">Three to four days a week</string>
    <string name="answer_many_many_days">Everyday</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="answer_not_affected">Doesn\'t affect me</string>
    <string name="answer_somewhat">Somewhat</string>
    <string name="answer_somewhat_2">Some-what</string>
    <string name="answer_a_lot">A lot</string>
    <string name="answer_crippling">Crippling</string>
    <string name="answer_not_very">Not very</string>
    <string name="answer_very_understanding">Very\nunderstanding</string>
    <string name="answer_not_much">Not much</string>
    <string name="answer_a_little">A little</string>
    <string name="answer_hard_time">I have a hard time seeing myself making an appointment</string>
    <string name="answer_can_see">I can see myself making an appointment</string>
    <string name="answer_could_stop">Yes, and it could stop me from getting help</string>
    <string name="answer_would_not_stop">Yes, but it wouldn\'t stop me from getting help</string>
    <string name="answer_not_really">No, not really</string>
    <string name="answer_very_poor">Very poor</string>
    <string name="answer_poor">Poor</string>
    <string name="answer_okay">Okay</string>
    <string name="answer_good">Good</string>
    <string name="answer_very_good">Very good</string>
    <string-array name="gender_array">
        <item></item>
        <item>Male</item>
        <item>Female</item>
        <item>Enter option</item>
    </string-array>
    <string-array name="ethnicity_array">
        <item></item>
        <item>African American/Black</item>
        <item>Mexican American/Chicano</item>
        <item>Hispanic/Latino</item>
        <item>Native American/Alaska Native</item>
        <item>Pacific Islander</item>
        <item>Chinese</item>
        <item>Filipino</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>South Asian</item>
        <item>Other Asian</item>
        <item>White</item>
        <item>Enter option</item>
    </string-array>
    <string-array name="school_year">
        <item></item>
        <item>First</item>
        <item>Second</item>
        <item>Third</item>
        <item>Fourth</item>
        <item>Fifth or Above</item>
        <item>Graduate student</item>
        <item>Not currently enrolled</item>
    </string-array>
    <string-array name="yes_no_array">
        <item></item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="college_name_array">
        <item></item>
        <item>University of California, Berkeley</item>
        <item>University of California, Davis</item>
        <item>University of California, Irvine</item>
        <item>University of California, Los Angeles</item>
        <item>University of California, Merced</item>
        <item>University of California, Riverside</item>
        <item>University of California, San Diego</item>
        <item>University of California, Santa Cruz</item>
        <item>Whitney High School</item>
        <item>Artesia High School</item>
        <item>Cerritos High School</item>
        <item>Not currently enrolled</item>
        <item>Enter option</item>
    </string-array>
</resources>