<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_age"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_age"
            android:id="@+id/demo_age_answer"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_gender"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/demo_gender_answer"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_gender"
            android:id="@+id/gender_custom_answer"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_ethnicity"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/demo_ethnic_answer"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_ethnicity"
            android:id="@+id/ethnicity_custom_answer"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_school_year"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/demo_sch_yr_answer"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_family"
            android:textSize="20sp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/demo_first_answer"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_college_name"
            android:textSize="20sp"
            android:paddingTop="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/demo_college_answer" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/_college_name"
            android:id="@+id/college_name_custom_answer"
            android:inputType="text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_start_quiz"
            android:singleLine="false"
            android:id="@+id/start"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/text_button_padding"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</ScrollView>