<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView_about_us"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textView_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_health_tool"
                android:textSize="32sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:id="@+id/textView_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us_paragraph"
                android:textSize="18sp"
                android:autoLink="all"
                android:hyphenationFrequency="none"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textView_disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_disclaimer"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="25dp"/>

            <Button
                android:id="@+id/button_mainMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/return_to_home"
                android:layout_marginBottom="25dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>