<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <morningsignout.phq9transcendi.HelperClasses.BlinkScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/container_demo_intro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_continue_demo"
        style="@style/BlinkScrollViewStyle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_demographics_intro"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="20dp"/>

    </morningsignout.phq9transcendi.HelperClasses.BlinkScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_skip"
        android:id="@+id/button_skip_demo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="@dimen/text_button_padding"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_continue"
        android:id="@+id/button_continue_demo"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="@dimen/text_button_padding"
        android:layout_above="@+id/button_skip_demo"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
