<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.IndexActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="40dp"
        android:text="@string/main_menu_text"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <!--android:background="?android:attr/selectableItemBackground" />-->

    <Space
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_centerInParent="true"
        android:layout_marginTop="0dp"
        android:id="@+id/index_space"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:text="@string/main_start_quiz"
        android:id="@+id/startButton"
        android:padding="@dimen/text_button_padding"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/index_space" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_change_button"
        android:id="@+id/themeButton"
        android:padding="@dimen/text_button_padding"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
