<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuizActivity">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageButton_prevq"
        android:contentDescription="@string/description_previous"
        android:src="@drawable/green_arrow"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:rotation="180"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:onClick="onClickPrevArrow"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageButton_nextq"
        android:contentDescription="@string/description_next"
        android:src="@drawable/green_arrow"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="6dp"
        android:onClick="onClickNextArrow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textSize="32sp"
        android:gravity="center"
        android:alpha=".7"
        android:id="@+id/textView_question_number"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/imageView_white_line"
        android:contentDescription="@string/description_white_border"
        android:layout_above="@+id/imageButton_prevq"
        android:layout_marginBottom="6dp"
        android:background="@android:color/white" />

    <Space
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_above="@id/imageView_white_line"
        android:id="@+id/space_below_choices" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/answer_choices"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_above="@id/space_below_choices"
        >

        <RadioButton android:id="@+id/radio_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:background="?tableColor"
            android:foreground="?attr/selectableItemBackground"

            />
        <RadioButton android:id="@+id/radio_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:foreground="?attr/selectableItemBackground"
            />
        <RadioButton android:id="@+id/radio_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:background="?tableColor"
            android:foreground="?attr/selectableItemBackground"
            />
        <RadioButton android:id="@+id/radio_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:foreground="?attr/selectableItemBackground"
            />
        <RadioButton android:id="@+id/radio_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:background="?tableColor"
            android:foreground="?attr/selectableItemBackground"
            />
    </RadioGroup>

    <Space
        android:id="@+id/space_aboveAnswerChoices"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_above="@id/answer_choices" />

    <!-- Next time, change yes/no questions to radiobuttons -->

    <!-- Next time, try to change background to have diagonal stripes -->
    <!-- or "box within a box" to replicate a shadow effect. End result -->
    <!-- must be that extra whitespace isn't ugly -->
    <TextView
        android:background="?attr/quizbackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@id/space_aboveAnswerChoices"
        android:layout_centerHorizontal="true"
        android:id="@+id/questionView"
        android:gravity="center"
        android:textSize="24sp"
        android:padding="20dp"
        android:visibility="visible"/>

    <!-- Next time: "sliding" view animation and logic for transition -->
    <!-- between short question view and long question view -->
    <include layout="@layout/scrollable_question_view"
        android:visibility="gone"/>

</RelativeLayout>
